--- a/10.html
+++ b/10.html
@@ -111,11 +111,11 @@
     
     const config = {
         // Műszak betűjele (A, B, C vagy D):
-        shift: "A",
+        shift: "C",
 
         // NEVEK: Csak írd be őket egymás után vesszővel elválasztva.
         // Bármennyit írhatsz, törölhetsz, a sorrend számít!
-        names: "Barbi, Peti, Jani"
+        names: "Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Kriszti"
     };
 
     // ==========================================
