--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             box-shadow: 0 10px 30px rgba(59, 130, 246, 0.5), inset 0 2px 5px rgba(255,255,255,0.2);
             cursor: pointer; z-index: 2147483647; 
             border: 1px solid rgba(255,255,255,0.1);
-            transition: transform 0.2s, top 0.3s, bottom 0.3s; /* Transition hozzáadva a finom mozgáshoz */
+            transition: transform 0.2s, top 0.3s, bottom 0.3s;
             -webkit-user-select: none; 
             -moz-user-select: none;
             -ms-user-select: none;
@@ -267,7 +267,6 @@
         .refresh-fab span { font-size: 22px; color: var(--accent); line-height: 1; font-weight: bold; pointer-events: none; }
 
         /* --- MÓDOSÍTÁS: 1.HTML SPECIÁLIS POZÍCIÓK --- */
-        /* Ha a 'search-mode-active' osztály rajta van a body-n, a gombok fentre kerülnek */
         body.search-mode-active .menu-fab {
             bottom: auto !important;
             top: 420px !important;
@@ -276,7 +275,7 @@
         
         body.search-mode-active .refresh-fab {
             bottom: auto !important;
-            top: 490px !important; /* Menü alatt */
+            top: 490px !important;
             right: 27px !important;
         }
         /* ------------------------------------------- */
@@ -360,6 +359,7 @@
         <div onclick="openStaffPro(this)" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
         <div onclick="loadModule('9.html', false, this)" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
         <div onclick="loadModule('10.html', false, this)" class="nav-item"><i>🚮</i> Szemétkihordás Terv</div>
+        <div onclick="loadModule('11.html', false, this)" class="nav-item"><i>❌</i> Szárak kikapcsolása</div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
@@ -531,6 +531,7 @@
         '8.html': '👥 Szabadságok (Staff Pro)',
         '9.html': '📷 Barcode Scan',
         '10.html': '🗑️ Szemétkihordás Terv',
+        '11.html': '🔌 Szárak kikapcsolása', // --- ÚJ SOR HOZZÁADVA ---
         'home':   '🏠 Kezdőlap'
     };
 
